--- a/wrangling-solutions.Rmd
+++ b/wrangling-solutions.Rmd
@@ -183,7 +183,7 @@ pop
 ```
 
 
-*Task 5: Use `gather`, `str_replace_all`, and `as.integer` to change cells in the year column from, for example, the character "pop2001" to the integer "2001".*
+*Task 5: Use `mutate`, `str_replace_all`, and `as.integer` to change cells in the year column from, for example, the character "pop2001" to the integer "2001".*
 
 ```{r wrangleYearColumn-setup, message=FALSE, warning=FALSE}
 library(tidyverse)
@@ -250,7 +250,7 @@ By exploring this dataframe, you should recognize that it is not in `tidy data` 
 ```{r gatherLd-setup, echo=FALSE, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(magrittr)
-pop <- read_csv("https://raw.githubusercontent.com/awpark/learnR/master/ld7-8.csv")
+ld <- read_csv("https://raw.githubusercontent.com/awpark/learnR/master/ld7-8.csv")
 ```
 
 
@@ -265,3 +265,21 @@ ld %<>% gather(starts_with("Cases"),key="year",value="cases") %>% na.omit
 ld
 ```
 
+*Task 9: Using `mutate`, `str_replace_all`, and `as.integer`, remove the text component of cells in the year column and convert this column to data type 'integer'.*
+
+```{r wrangleYearColumn2-setup, message=FALSE, warning=FALSE}
+library(tidyverse)
+library(magrittr)
+ld <- read_csv("https://raw.githubusercontent.com/awpark/learnR/master/ld8-9.csv")
+```
+
+
+```{r wrangleYearColumn2, exercise=TRUE, message=FALSE, warning=FALSE}
+
+```
+
+
+```{r wrangleYearColumn2-solution, echo=FALSE}
+ld %<>% mutate(year=str_replace_all(year,"Cases","")) %>% mutate(year=as.integer(year))
+ld
+```
