--- a/wrangling-solutions.Rmd
+++ b/wrangling-solutions.Rmd
@@ -415,7 +415,7 @@ Great job! The disease data is in tidy format and we're ready to join all three 
 
 We will use the `inner_join` function (part of tidyverse) to join pairs of dataframes together. This function will only retain lines of data provided *both* dataframes have data for that line (there are other join functions for other cases). In our case a unique line of data refers to a unique combination of county (identified by 'fips') and year. We'll first join the two dataframes you've created, then we'll join the climate data. In principle, you can nominate which columns should be used to match up the dataframes. If we omit that step, R will just use all columns that are in common between the two dataframes being joined. Our dataframes only have 'fips' and 'year' as the common column names, so we don't need to nominate columns. 
 
-*Task 14: Use `inner_join` to create a new dataframe called 'ld.pop' which joins the 'ld' and 'pop' dataframes you created.*
+*Task 14: Use `inner_join` to create a new dataframe called 'ld.pop' which joins the 'ld' and 'pop' dataframes you created. Type 'ld.pop' to inspect this new data frame.*
 
 ```{r joinLdPop-setup}
 library(tidyverse)
@@ -430,5 +430,24 @@ pop <- read_csv("https://raw.githubusercontent.com/awpark/learnR/master/pop_fina
 
 ```{r joinLdPop-solution, echo=FALSE}
 ld.pop <- inner_join(ld,pop)
+ld.pop
 ```
 
+
+*Task 15: To create the finalized dataframe, read in the climate data (located at "https://raw.githubusercontent.com/awpark/learnR/master/climate.csv") as 'clim' and join this with 'ld.pop' to make a new data frame 'ld.pop.clim', and inspect this new dataframe.*
+
+```{r joinClim-setup}
+library(tidyverse)
+library(magrittr)
+ld.pop <- read_csv("https://raw.githubusercontent.com/awpark/learnR/master/ldPop.csv")
+```
+
+```{r joinClim, exercise=TRUE, message=FALSE, warning=FALSE}
+
+```
+
+```{r joinClim-solution, echo=FALSE}
+clim <- read_csv("https://raw.githubusercontent.com/awpark/learnR/master/climate.csv")
+ld.pop.clim <- inner_join(ld.pop,clim)
+ld.pop.clim
+```
